Export secret key

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -22,6 +22,6 @@ jobs:
           pip install -r requirements.txt
       - name: Run Tests
         run: |
-          echo SECRET_KEY=${{secrets.SECRET_KEY}} >> .env
+          export SECRET_KEY=${{secrets.SECRET_KEY}}
           cd app_python
           python manage.py test
