Add cache for dockerhub build

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -43,5 +43,8 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/devops-course:latest
+          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/devops-course:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/devops-course:buildcache,mode=max
