--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3.9"
 volumes:
   grafana-data: {}
   promtail-data: {}
+  prometheus-data: {}
+  loki-data: {}
 
 networks:
   logging:
@@ -10,6 +12,7 @@ networks:
 services:
   web:
     image: ${IMAGE_NAME}
+    container_name: logging-app
     ports:
       - "8000:8000"
     expose:
@@ -20,9 +23,16 @@ services:
     - SECRET_KEY="${SECRET_KEY}"
     volumes:
       - ${PWD}/log:/var/log
+    mem_limit: "256m"
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 3
+        max-size: 10m
 
   grafana:
     image: grafana/grafana:${GRAFANA_VERSION}
+    container_name: logging-grafana
     ports:
       - "3000:3000"
     expose:
@@ -32,19 +42,34 @@ services:
       - grafana-data:/var/lib/grafana
     networks:
       - logging
-
+    mem_limit: "256m"
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 3
+        max-size: 10m
+  
   loki:
     image: grafana/loki:${LOKI_VERSION}
+    container_name: logging-loki
     ports:
       - "3100:3100"
     expose: 
       - 3100
     restart: unless-stopped
+    command: -config.file=/etc/loki/local-config.yaml
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 3
+        max-size: 10m
     networks:
       - logging
+    mem_limit: "256m"
   
   promtail:
     image: grafana/promtail:${PROMTAIL_VERSION}
+    container_name: logging-promtail
     ports:
       - "9080:9080"
     expose:
@@ -54,8 +79,33 @@ services:
       - promtail-data:/var/lib/promtail/positions
       - ${PWD}/log:/var/log
     command: -config.file=/etc/promtail/config.yml
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 3
+        max-size: 10m
     networks:
       - logging
-    
+    mem_limit: "256m"
+   
+  prometheus:
+    image: prom/prometheus:${PROMETHEUS_VERSION}
+    container_name: logging-prometheus
+    ports:
+      - "9090:9090"
+    expose:
+      - 9000
+    command: --config.file=/etc/prometheus/prometheus.yml
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - prometheus-data:/prometheus
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 3
+        max-size: 10m
+    networks:
+      - logging
+    mem_limit: "256m"
 
  
