--- a/k8s/app-python/templates/deployment.yaml
+++ b/k8s/app-python/templates/deployment.yaml
@@ -43,14 +43,6 @@ spec:
             - name: http
               containerPort: 8000
               protocol: TCP
-          # livenessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: http
-          # readinessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: http
           resources:
             requests:
               memory: "64Mi"
@@ -58,6 +50,14 @@ spec:
             limits:
               memory: "128Mi"
               cpu: "1000m"
+          volumeMounts:
+            - name: config
+              mountPath: "/config"
+              readOnly: true
+      volumes:
+        - name: config
+          configMap:
+            name: app-python-configmap
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
