--- a/k8s/app-python/values.yaml
+++ b/k8s/app-python/values.yaml
@@ -2,13 +2,13 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 3
 
 image:
   repository: lidiyadockerid/devops-course
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "lab9"
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -84,3 +84,9 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+podManagementPolicy: "Parallel"
+
+statefulSet:
+  name: visits
+  storageSize: 128M
