--- a/k8s/app-python/templates/deployment.yaml
+++ b/k8s/app-python/templates/deployment.yaml
@@ -39,6 +39,8 @@ spec:
                 secretKeyRef:
                   name: credentials
                   key: secretkey
+            - name: ENV_FILE
+              value: "Hello from the environment"
           ports:
             - name: http
               containerPort: 8000
